fix: upgrade xp, secondary weapon hidden after using it, default scrollbar problem, control bug

--- a/styles-cg.css
+++ b/styles-cg.css
@@ -7,8 +7,8 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: var(--modal-width, 80%);
-    max-width: 600px;
-    /* height: 95vh; */
+    max-width: 700px;
+     height: auto;
     /* Full viewport height */
     background-color: #111;
     border: 3px solid #4e15ac;
@@ -67,7 +67,11 @@
 
 @media only screen and (max-width: 768px) {
     .modal {
-        height: 90vh;
+        height: 70vh;
+        margin-top: 4vh;
+    }
+    #levelUpModal {
+        /*height: auto; !important;*/
     }
 }
 
@@ -78,9 +82,9 @@
 /* Adjustments for mobile landscape mode */
 @media only screen and (max-width: 768px) and (orientation: landscape) {
     .modal {
-        height: 90vh;
+        height: 70vh !important;
         /* Full viewport height in landscape mode */
-        width: 100vw;
+        width: 80vw;
         /* Full viewport width */
         max-width: none;
         /* Remove the max-width constraint */
