--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,9 @@ canvas {
     font-family: 'Press Start 2P', cursive;
     /* Arcade font */
     text-align: center;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
+    overflow-y: hidden;
+    overflow-x: hidden;
     scrollbar-width: thin;
 }
 
